[gd_scene load_steps=5 format=3 uid="uid://chywp86wwop7n"]

[ext_resource type="Script" uid="uid://doj5vqni5828n" path="res://scripts/menus/main.gd" id="1_hnw6f"]
[ext_resource type="PackedScene" uid="uid://d022mqen8qv4k" path="res://scenes/other/discord_rpc.tscn" id="2_wjjpd"]

[sub_resource type="Theme" id="Theme_hnw6f"]
default_font_size = 32
LineEdit/font_sizes/font_size = 32

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wjjpd"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hnw6f")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_right = 379.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 72
text = "PolyWorld"

[node name="Version" type="Label" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 76.0
offset_right = 105.0
offset_bottom = 99.0
theme_override_font_sizes/font_size = 16
text = "0.0.0-DEV"

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 16.0
offset_top = 384.0
offset_right = 264.0
offset_bottom = 632.0
alignment = 2

[node name="ConnectButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Connect"

[node name="ServersButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Servers"

[node name="QuitButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="PopupPanel" type="PopupPanel" parent="."]
transparent_bg = false
mode = 2
initial_position = 2
size = Vector2i(500, 300)
borderless = false
always_on_top = true
transparent = false

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = 496.0
offset_bottom = 296.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
alignment = 1

[node name="Label" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Connect to Server"
horizontal_alignment = 1

[node name="IPLabel" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Enter IP:"

[node name="IPEdit" type="LineEdit" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "127.0.0.1"
placeholder_text = "IP"

[node name="PortLabel" type="Label" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Enter Port:"

[node name="PortEdit" type="SpinBox" parent="PopupPanel/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_hnw6f")
max_value = 65565.0
value = 4040.0
rounded = true

[node name="Buttons" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
layout_mode = 2

[node name="ActualConnectButton" type="Button" parent="PopupPanel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Connect
"

[node name="PingServerButton" type="Button" parent="PopupPanel/VBoxContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Ping Server"

[node name="PingError" type="Label" parent="PopupPanel/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Server did not respond to the ping"
horizontal_alignment = 1

[node name="ServerDetailsRow1" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
visible = false
layout_mode = 2

[node name="ServerName" type="Label" parent="PopupPanel/VBoxContainer/ServerDetailsRow1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Name: an server aaaa"
text_overrun_behavior = 3

[node name="Ping" type="Label" parent="PopupPanel/VBoxContainer/ServerDetailsRow1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Ping: 50ms"

[node name="ServerDetailsRow2" type="HBoxContainer" parent="PopupPanel/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Secure" type="Label" parent="PopupPanel/VBoxContainer/ServerDetailsRow2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Secure? Yes"

[node name="MaxPlayers" type="Label" parent="PopupPanel/VBoxContainer/ServerDetailsRow2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Max Players: 50"

[node name="CreditsButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -72.0
offset_top = -40.0
offset_right = -9.0
offset_bottom = -9.0
grow_horizontal = 0
grow_vertical = 0
text = "Credits"

[node name="Discord RPC" parent="." instance=ExtResource("2_wjjpd")]
state = ""
large_image_text = ""

[node name="ContentWarning" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.105882)

[node name="Content" type="ColorRect" parent="ContentWarning"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -191.0
offset_right = 250.0
offset_bottom = 236.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.180392, 0.180392, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ContentWarning/Content"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -204.5
offset_right = 240.0
offset_bottom = 204.5
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="ContentWarning/Content/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Multiplayer Chat Warning"
horizontal_alignment = 1
uppercase = true

[node name="Message" type="Label" parent="ContentWarning/Content/VBoxContainer"]
custom_minimum_size = Vector2(480, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "By using chat, you agree that:
- Messages may be logged, monitored, and stored for 30 days to address abuse, cheating, or legal requests.
- You are 13+ and will not engage in hate speech, harassment, threats, or sharing personal info.
- Violations may result in bans or legal action.
- We are not liable for player conductâ€”report issues via in-game tools.
To delete your data or report underage users, contact privacy@cyteon.dev"
autowrap_mode = 2

[node name="CheckBox" type="CheckBox" parent="ContentWarning/Content/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxEmpty_wjjpd")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_wjjpd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wjjpd")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wjjpd")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_wjjpd")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_wjjpd")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wjjpd")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_wjjpd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_wjjpd")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_wjjpd")
theme_override_styles/normal = SubResource("StyleBoxEmpty_wjjpd")
text = "I agree to the above terms"

[node name="HBoxContainer" type="HBoxContainer" parent="ContentWarning/Content/VBoxContainer"]
custom_minimum_size = Vector2(460, 0)
layout_mode = 2
size_flags_horizontal = 4

[node name="EnableChat" type="Button" parent="ContentWarning/Content/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
disabled = true
text = "Enable Chat"

[node name="DisableChat" type="Button" parent="ContentWarning/Content/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Disable Chat"

[connection signal="pressed" from="Buttons/ConnectButton" to="." method="_on_connect_button_pressed"]
[connection signal="pressed" from="Buttons/ServersButton" to="." method="_on_servers_button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="text_changed" from="PopupPanel/VBoxContainer/IPEdit" to="." method="_on_ip_edit_text_changed"]
[connection signal="value_changed" from="PopupPanel/VBoxContainer/PortEdit" to="." method="_on_port_edit_value_changed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/Buttons/ActualConnectButton" to="." method="_on_actual_connect_button_pressed"]
[connection signal="pressed" from="PopupPanel/VBoxContainer/Buttons/PingServerButton" to="." method="_on_ping_server_button_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="toggled" from="ContentWarning/Content/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="ContentWarning/Content/VBoxContainer/HBoxContainer/EnableChat" to="." method="_on_enable_chat_pressed"]
[connection signal="pressed" from="ContentWarning/Content/VBoxContainer/HBoxContainer/DisableChat" to="." method="_on_disable_chat_pressed"]
